--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding:0;
+    
 }
 
 body{
@@ -13,15 +14,27 @@ nav{
     justify-content: space-between;
     align-items: center;
     padding: 30px;
+    border-bottom:2px solid white;
+    margin:25px;
+}
+
+h4{
+    font-size: 20px;
+}
+
+h4:hover{
+    text-decoration: underline;
 }
 
 .items{
     display: flex;
     align-items: center;
-    gap: 25px;
+    gap: 15px;
 }
 
 .content{
-    transform: translate(-50%,-50%);
+    text-align: center;
     font-size: 45px;
+    margin-top: 100px;
+    font-weight: 50px;
 }
